# IOT-SMARTHOME

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  actuators.c  actuators.h  backup.c  config.h  data.json  firebase_handler.c  firebase_handler.h  html_page.h  i2s.c  i2s_mic.c  i2s_mic.h  idf_component.yml  main.c  rfid_handler.c  rfid_handler.h  sensors.c  sensors.h  test.c  voice_handler.c  voice_handler.h  wifi_handler.c  wifi_handler.h  wifi_manager.c  wifi_manager.h
